# S-BiNER

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.txt  main.py  pyproject.toml
configs/: dataset_config.py  logger_config.py  model_config.py  pipeline_configs.py  train_config.py  training_config.yaml
pipelines/: pipeline.py
scripts/: run_aa.sh
src/: README.md
src/awesomealign/: aa.ipynb  awesome_align_data.py
src/configs/: dataset_config.py  logger_config.py  model_config.py  train_config.py
src/datasets/: alignment_pair_dataset.py  alignment_pair_dataset_updated.py  base_dataset.py  dataset_test.ipynb  datasets.py  datasets_gold.py  datasets_silver.py  ner_dataset.py  test.ipynb  zh_prep.py
src/models/: alignment_eval.py  alignment_trainer.py  binary_align.py  binary_align_eval.py  binary_align_factory.py  binary_align_models.py  binary_align_trainer.py  binary_token_classification.py  train.py
src/ner/: ner_heuristics.py
src/pipelines/: pipeline.py
src/utils/: decorators.py  helpers.py  pipeline_step.py
tests/: conftest.py  test_configs.py
