[project]
name = "binary-align-zh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hanlp>=2.1.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "typing>=3.10.0.0",
]
